--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="button function ac">AC</div>
                 <div class="button function pm">+/-</div>
                 <div class="button function percent">%</div>
-                <div class="button operator division">/</div>
+                <div class="button operator division">&divide;</div>
                 <div class="button number-7">7</div>
                 <div class="button number-8">8</div>
                 <div class="button number-9">9</div>
