--- a/index.html
+++ b/index.html
@@ -10,40 +10,42 @@
 
 </head>
 <body>
-    <div class="calculator">
-        <div class="top-container">
-            <div class="clock">
-              <span class="hour">09</span>:<span class="minute">23</span>
+    <main id="mockup">
+        <div class="calculator">
+            <div class="top-container">
+                <div class="clock">
+                <span class="hour">09</span>:<span class="minute">23</span>
+                </div>
+                <div class="status">
+                    <img src="status.png" alt="Status" width="65px">
+                </div>
             </div>
-            <div class="status">
-                <img src="status.png" alt="Status" width="65px">
-            </div>
-        </div>
-        <div class="display">0</div>
-            <div class="buttons-container">
-                <div class="button function ac">AC</div>
-                <div class="button function pm">+/-</div>
-                <div class="button function percent">%</div>
-                <div class="button operator division">&divide;</div>
-                <div class="button number-7">7</div>
-                <div class="button number-8">8</div>
-                <div class="button number-9">9</div>
-                <div class="button operator multiplication">x</div>
-                <div class="button number-4">4</div>
-                <div class="button number-5">5</div>
-                <div class="button number-6">6</div>
-                <div class="button operator subtracion">-</div>
-                <div class="button number-1">1</div>
-                <div class="button number-2">2</div>
-                <div class="button number-3">3</div>
-                <div class="button operator addition">+</div>
-                <div class="button number-0">0</div>
-                <div class="button decimal">.</div>
-                <div class="button operator equal">=</div>
+            <div class="display">0</div>
+                <div class="buttons-container">
+                    <div class="button function ac">AC</div>
+                    <div class="button function pm">+/-</div>
+                    <div class="button function percent">%</div>
+                    <div class="button operator division">&divide;</div>
+                    <div class="button number-7">7</div>
+                    <div class="button number-8">8</div>
+                    <div class="button number-9">9</div>
+                    <div class="button operator multiplication">x</div>
+                    <div class="button number-4">4</div>
+                    <div class="button number-5">5</div>
+                    <div class="button number-6">6</div>
+                    <div class="button operator subtracion">-</div>
+                    <div class="button number-1">1</div>
+                    <div class="button number-2">2</div>
+                    <div class="button number-3">3</div>
+                    <div class="button operator addition">+</div>
+                    <div class="button number-0">0</div>
+                    <div class="button decimal">.</div>
+                    <div class="button operator equal">=</div>
 
-            </div>
-        <div class="bottom"></div>
-    </div>
+                </div>
+            <div class="bottom"></div>
+        </div>
+    </main>
 <script src="app.js"></script>
 </body>
 </html>
