--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <span class="hour">09</span>:<span class="minute">23</span>
                 </div>
                 <div class="status">
-                    <img src="status.png" alt="Status" width="65px">
+                    <img src="img/status.png" alt="Status" width="65px">
                 </div>
             </div>
             <div class="display">0</div>
