--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="button number-3">3</div>
                     <div class="button operator addition">+</div>
                     <div class="button number-0">0</div>
-                    <div class="button decimal">.</div>
+                    <div class="button decimal">,</div>
                     <div class="button operator equal">=</div>
 
                 </div>
